# makepass-rs

./: .gitignore  Cargo.toml  README.md  build.rs  makepass-rs.sublime-project
src/: main.rs  password.rs  util.rs  wordlists.rs
wordlists/: README.md  check_wordlist.py  default.list  en_us.list  english.list
